--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
         <h1 style="color: #07F">A Colorful Website</h1>  
         <p>This is a website about color!</p> 
         <p><a href="index.html">Return to home page</a></p>       
-        <h2 style="color: #C00">News</h2>  
-        <ul>    
-            <li>Nothing going on (yet)</li>  
-        </ul>
+        <h2 style="color: #C00">News</h2><ul>  <li><a href="news-1.html">Blue Is The New Hue</a></li></ul>
     </body>
 </html>
